# tree-sitter-codeintel

./: Cargo.toml
src/: error.rs  lib.rs
src/language/: mod.rs
src/language/golang/: local_query.scm  mod.rs
