[package]
name = "tree-sitter-codeintel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"]}
tracing = "0.1.40"
tree-sitter = "0.20" # current scope query grammar doesn't work on 0.22
tree-sitter-c = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
